tests-ast-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0090/input.js
"use strict"; (eval, a) => 42
